--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "esbuild": "^0.20.1"
   },
   "workspaces": [
-    "lambdas/TCU",
-    "lambdas/CND",
-    "lambdas/SEFAZMG"
+    "download"
   ],
   "dependencies": {
     "@aws-sdk/client-s3": "^3.529.1",
