--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "esbuild": "^0.20.1"
   },
   "workspaces": [
-    "download"
+    "lambdas/download"
   ],
   "dependencies": {
     "@aws-sdk/client-s3": "^3.529.1",
