--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "esbuild": "^0.20.1"
   },
   "workspaces": [
-    "lambdas/download"
+    "lambdas/download",
+    "labmdas/convert",
+    "shared"
   ],
   "dependencies": {
     "@aws-sdk/client-s3": "^3.529.1",
