--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,12 @@
     "preserveConstEnums": true,
     "noEmit": true,
     "sourceMap": false,
-    "module":"commonjs",
-    "moduleResolution":"node",
-    "esModuleInterop": true, 
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true, 
-    "isolatedModules": true, 
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true
   },
   "exclude": ["node_modules", "**/*.test.ts"]
 }
