--- a/lambdas/download/package.json
+++ b/lambdas/download/package.json
@@ -5,10 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rm -rf dist",
-    "build": "NODE_PATH=/opt/node_modules esbuild index.ts --bundle --platform=node --target=es2020 --packages=external --outfile=dist/index.js",
+    "build": "esbuild index.ts --bundle --platform=node --target=es2020 --outfile=dist/index.js",
     "postbuild": "cd dist && zip -r index.zip index.js*"
-  },
-  "dependencies": {
-    "axios": "^1.6.8"
   }
 }
