--- a/lambdas/download/package.json
+++ b/lambdas/download/package.json
@@ -7,5 +7,8 @@
     "prebuild": "rm -rf dist",
     "build": "esbuild index.ts --bundle --platform=node --target=es2020 --outfile=dist/index.js",
     "postbuild": "cd dist && zip -r index.zip index.js*"
+  },
+  "dependencies": {
+    "axios": "^1.6.8"
   }
 }
