--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "shared"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.529.1",
-    "axios": "^1.6.8"
+    "@aws-sdk/client-s3": "^3.529.1"
   }
 }
